syntax = "proto3";

package io.kryptoworx.signalcli.storage.proto;

enum PbUnidentifiedAccessMode {
    UNKNOWN = 0;
    DISABLED = 1;
    ENABLED = 2;
    UNRESTRICTED = 3;
}

enum PbCapability {
    GV2 = 0;
    STORAGE = 1;
    GV1_MIGRATION = 2;
    SENDER_KEY = 3;
}

message PbContact {
    string name = 1;
    string color = 2;
    int32 message_expiration_time = 3;
    bool blocked = 4;
    bool archived = 5;
}

message PbProfile {
    int64 last_update_timestamp = 1;
    string given_name = 2;
    string family_name = 3;
    string about = 4;
    string about_emoji = 5;
    string avatar_url_path = 8;
    PbUnidentifiedAccessMode unidentified_access_mode = 6;
    repeated PbCapability capabilities = 7;
}

message PbUUID {
	sint64 lsb = 1;
	sint64 msb = 2;
}

message PbRecipient {
    int64 id = 1;
    string number = 2;
    PbUUID uuid = 3;
    bytes profile_key = 4;
    bytes profile_key_credential = 5;
    PbContact contact = 6;
    PbProfile profile = 7;
}

message PbIdentity {
	bytes identity_key = 1;
    int32 trust_level = 2;
    int64 added_timestamp = 3;
}
